--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
+    "kafkajs": "^2.2.4",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2"
   }
